// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<OptionCustom /> handles click and keyDown 1`] = `
<li
  className="OptionCustomStyled-dGYyuP geFRTu"
  disabled={false}
  onClick={[Function]}
  onKeyDown={[Function]}
  selected={false}
  tabIndex={0}
>
  
</li>
`;

exports[`<OptionCustom /> render correctly if dense 1`] = `
<li
  className="OptionCustomStyled-dGYyuP geFRTu"
  disabled={false}
  onClick={[Function]}
  onKeyDown={[Function]}
  selected={false}
  tabIndex={0}
>
  
</li>
`;

exports[`<OptionCustom /> render correctly if disabled 1`] = `
<li
  className="OptionCustomStyled-dGYyuP doQNPb"
  disabled={true}
  selected={false}
>
  
</li>
`;

exports[`<OptionCustom /> render correctly if fullWidth 1`] = `
<li
  className="OptionCustomStyled-dGYyuP geFRTu"
  disabled={false}
  onClick={[Function]}
  onKeyDown={[Function]}
  selected={false}
  tabIndex={0}
>
  
</li>
`;

exports[`<OptionCustom /> render correctly if fullWidth and dense 1`] = `
<li
  className="OptionCustomStyled-dGYyuP geFRTu"
  disabled={false}
  onClick={[Function]}
  onKeyDown={[Function]}
  selected={false}
  tabIndex={0}
>
  
</li>
`;

exports[`<OptionCustom /> render correctly if selected 1`] = `
<li
  className="OptionCustomStyled-dGYyuP ehUsqt"
  disabled={false}
  onClick={[Function]}
  onKeyDown={[Function]}
  selected={true}
  tabIndex={0}
>
  
</li>
`;

exports[`<OptionsListCustom /> handles option click 1`] = `
<ul
  className="OptionsListStyled-cqpdKX gjQDpO"
>
  <li
    className="OptionCustomStyled-dGYyuP geFRTu"
    disabled={false}
    onClick={[Function]}
    onKeyDown={[Function]}
    selected={false}
    tabIndex={0}
  >
    text
  </li>
</ul>
`;

exports[`<OptionsListCustom /> handles option click 2`] = `
<ul
  className="OptionsListStyled-cqpdKX gjQDpO"
>
  <li
    className="OptionCustomStyled-dGYyuP geFRTu"
    disabled={false}
    onClick={[Function]}
    onKeyDown={[Function]}
    selected={false}
    tabIndex={0}
  >
    text
  </li>
</ul>
`;

exports[`<OptionsListCustom /> handles scroll, updates and unmounts 1`] = `
<ul
  className="OptionsListStyled-cqpdKX gjQDpO"
>
  <li
    className="OptionCustomStyled-dGYyuP geFRTu"
    disabled={false}
    onClick={[Function]}
    onKeyDown={[Function]}
    selected={false}
    tabIndex={0}
  >
    text
  </li>
</ul>
`;

exports[`<OptionsListCustom /> handles scroll, updates and unmounts 2`] = `
<ul
  className="OptionsListStyled-cqpdKX gjQDpO"
>
  <li
    className="OptionCustomStyled-dGYyuP geFRTu"
    disabled={false}
    onClick={[Function]}
    onKeyDown={[Function]}
    selected={false}
    tabIndex={0}
  >
    text
  </li>
</ul>
`;

exports[`<OptionsListCustom /> handles scroll, updates and unmounts 3`] = `
<ul
  className="OptionsListStyled-cqpdKX gjQDpO"
>
  <li
    className="OptionCustomStyled-dGYyuP geFRTu"
    disabled={false}
    onClick={[Function]}
    onKeyDown={[Function]}
    selected={false}
    tabIndex={0}
  >
    text
  </li>
</ul>
`;

exports[`<OptionsListCustom /> handles scroll, updates and unmounts 4`] = `
<ul
  className="OptionsListStyled-cqpdKX gjQDpO"
>
  <li
    className="OptionCustomStyled-dGYyuP geFRTu"
    disabled={false}
    onClick={[Function]}
    onKeyDown={[Function]}
    selected={false}
    tabIndex={0}
  >
    text
  </li>
</ul>
`;

exports[`<OptionsListCustom /> renders correctly if prop dense 1`] = `
<ul
  className="OptionsListStyled-cqpdKX gjQDpO"
>
  <li
    className="OptionCustomStyled-dGYyuP geFRTu"
    disabled={false}
    onClick={[Function]}
    onKeyDown={[Function]}
    selected={false}
    tabIndex={0}
  >
    text
  </li>
</ul>
`;

exports[`<OptionsListCustom /> renders correctly if prop fullWidth 1`] = `
<ul
  className="OptionsListStyled-cqpdKX gjQDpO"
>
  <li
    className="OptionCustomStyled-dGYyuP geFRTu"
    disabled={false}
    onClick={[Function]}
    onKeyDown={[Function]}
    selected={false}
    tabIndex={0}
  >
    text
  </li>
</ul>
`;

exports[`<OptionsListCustom /> renders correctly if prop fullWidth and dense 1`] = `
<ul
  className="OptionsListStyled-cqpdKX gjQDpO"
>
  <li
    className="OptionCustomStyled-dGYyuP geFRTu"
    disabled={false}
    onClick={[Function]}
    onKeyDown={[Function]}
    selected={false}
    tabIndex={0}
  >
    text
  </li>
</ul>
`;

exports[`<SelectBox/> renders correctly if prop dense set 1`] = `
<div
  className="SelectBoxStyled-ldPAdN fPuUed"
>
  <div
    className="SelectBoxCustomStyled-glIvSg hEwxlg"
    onClick={[Function]}
  >
    <div
      className="ContentBoxStyled-kOsMwk cmDiNF"
    >
      <label
        className="SelectBoxLabelStyled-hpnTMV iBDluV"
        disabled={false}
        htmlFor="select-box-11"
      >
        <span
          className="SelectBoxLabelTextStyled-crvvnG ivXRob"
        >
          
        </span>
      </label>
      <div
        className="WrapperStyled-hVySJD iDsAQn"
      >
        <button
          className="ButtonStyled-fxLcQY iImjnM"
          disabled={false}
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex={0}
        >
          <span
            className="ButtonTextStyled-kqmWUR bKWUls"
          >
            
          </span>
          <span
            className="ArrowIconStyled-jkFScX cOyrCN"
            disabled={false}
          >
            <div
              className="IconSvgStyled-kZHpyB kakXQl"
              color=""
              rotate={0}
              size="normal"
            >
              <svg
                viewBox="0 0 24 24"
              >
                <path
                  d="M7,10l5,5l5-5H7z"
                />
              </svg>
            </div>
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`<SelectBox/> renders correctly if prop disabled set 1`] = `
<div
  className="SelectBoxStyled-ldPAdN fPuUed"
>
  <div
    className="SelectBoxCustomStyled-glIvSg hEwxlg"
    onClick={[Function]}
  >
    <div
      className="ContentBoxStyled-kOsMwk cmDiNF"
    >
      <label
        className="SelectBoxLabelStyled-hpnTMV iBDluV"
        disabled={true}
        htmlFor="select-box-10"
      >
        <span
          className="SelectBoxLabelTextStyled-crvvnG ivXRob"
        >
          
        </span>
      </label>
      <div
        className="WrapperStyled-hVySJD iDsAQn"
      >
        <button
          className="ButtonStyled-fxLcQY cnLRbk"
          disabled={true}
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex={0}
        >
          <span
            className="ButtonTextStyled-kqmWUR ddDOaK"
          >
            
          </span>
          <span
            className="ArrowIconStyled-jkFScX iMVnXK"
            disabled={true}
          >
            <div
              className="IconSvgStyled-kZHpyB kakXQl"
              color=""
              rotate={0}
              size="normal"
            >
              <svg
                viewBox="0 0 24 24"
              >
                <path
                  d="M7,10l5,5l5-5H7z"
                />
              </svg>
            </div>
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`<SelectBox/> renders correctly if prop fullWidth set 1`] = `
<div
  className="SelectBoxStyled-ldPAdN fPuUed"
>
  <div
    className="SelectBoxCustomStyled-glIvSg hEwxlg"
    onClick={[Function]}
  >
    <div
      className="ContentBoxStyled-kOsMwk cmDiNF"
    >
      <label
        className="SelectBoxLabelStyled-hpnTMV iBDluV"
        disabled={false}
        htmlFor="select-box-12"
      >
        <span
          className="SelectBoxLabelTextStyled-crvvnG ivXRob"
        >
          
        </span>
      </label>
      <div
        className="WrapperStyled-hVySJD iDsAQn"
      >
        <button
          className="ButtonStyled-fxLcQY jaTCPo"
          disabled={false}
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex={0}
        >
          <span
            className="ButtonTextStyled-kqmWUR gCWwOM"
          >
            
          </span>
          <span
            className="ArrowIconStyled-jkFScX giKDTi"
            disabled={false}
          >
            <div
              className="IconSvgStyled-kZHpyB kakXQl"
              color=""
              rotate={0}
              size="normal"
            >
              <svg
                viewBox="0 0 24 24"
              >
                <path
                  d="M7,10l5,5l5-5H7z"
                />
              </svg>
            </div>
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`<SelectBox/> renders correctly if prop labelPosition set 1`] = `
<div
  className="SelectBoxStyled-ldPAdN fPuUed"
>
  <div
    className="SelectBoxCustomStyled-glIvSg hEwxlg"
    onClick={[Function]}
  >
    <div
      className="ContentBoxStyled-kOsMwk cmDiNF"
    >
      <label
        className="SelectBoxLabelStyled-hpnTMV iBDluV"
        disabled={false}
        htmlFor="select-box-13"
      >
        <span
          className="SelectBoxLabelTextStyled-crvvnG ivXRob"
        >
          
        </span>
      </label>
      <div
        className="WrapperStyled-hVySJD iDsAQn"
      >
        <button
          className="ButtonStyled-fxLcQY iImjnM"
          disabled={false}
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex={0}
        >
          <span
            className="ButtonTextStyled-kqmWUR ddDOaK"
          >
            
          </span>
          <span
            className="ArrowIconStyled-jkFScX fHTcFA"
            disabled={false}
          >
            <div
              className="IconSvgStyled-kZHpyB kakXQl"
              color=""
              rotate={0}
              size="normal"
            >
              <svg
                viewBox="0 0 24 24"
              >
                <path
                  d="M7,10l5,5l5-5H7z"
                />
              </svg>
            </div>
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`<SelectBox/> renders correctly if prop labelPosition set 2`] = `
<div
  className="SelectBoxStyled-ldPAdN fPuUed"
>
  <div
    className="SelectBoxCustomStyled-glIvSg hEwxlg"
    onClick={[Function]}
  >
    <div
      className="ContentBoxStyled-kOsMwk ozuiK"
    >
      <label
        className="SelectBoxLabelStyled-hpnTMV bmtdCc"
        disabled={false}
        htmlFor="select-box-14"
      >
        <span
          className="SelectBoxLabelTextStyled-crvvnG ivXRob"
        >
          
        </span>
      </label>
      <div
        className="WrapperStyled-hVySJD iDsAQn"
      >
        <button
          className="ButtonStyled-fxLcQY iImjnM"
          disabled={false}
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex={0}
        >
          <span
            className="ButtonTextStyled-kqmWUR ddDOaK"
          >
            
          </span>
          <span
            className="ArrowIconStyled-jkFScX fHTcFA"
            disabled={false}
          >
            <div
              className="IconSvgStyled-kZHpyB kakXQl"
              color=""
              rotate={0}
              size="normal"
            >
              <svg
                viewBox="0 0 24 24"
              >
                <path
                  d="M7,10l5,5l5-5H7z"
                />
              </svg>
            </div>
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`<SelectBox/> renders correctly if prop light set 1`] = `
<div
  className="SelectBoxStyled-ldPAdN fPuUed"
>
  <div
    className="SelectBoxCustomStyled-glIvSg hEwxlg"
    onClick={[Function]}
  >
    <div
      className="ContentBoxStyled-kOsMwk cmDiNF"
    >
      <label
        className="SelectBoxLabelStyled-hpnTMV iBDluV"
        disabled={false}
        htmlFor="select-box-15"
      >
        <span
          className="SelectBoxLabelTextStyled-crvvnG ivXRob"
        >
          
        </span>
      </label>
      <div
        className="WrapperStyled-hVySJD iDsAQn"
      >
        <button
          className="ButtonStyled-fxLcQY iImjnM"
          disabled={false}
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex={0}
        >
          <span
            className="ButtonTextStyled-kqmWUR ddDOaK"
          >
            
          </span>
          <span
            className="ArrowIconStyled-jkFScX fHTcFA"
            disabled={false}
          >
            <div
              className="IconSvgStyled-kZHpyB kakXQl"
              color=""
              rotate={0}
              size="normal"
            >
              <svg
                viewBox="0 0 24 24"
              >
                <path
                  d="M7,10l5,5l5-5H7z"
                />
              </svg>
            </div>
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`<SelectBox/> renders correctly if prop message set text 1`] = `
<div
  className="SelectBoxStyled-ldPAdN fPuUed"
>
  <div
    className="SelectBoxCustomStyled-glIvSg hEwxlg"
    onClick={[Function]}
  >
    <div
      className="ContentBoxStyled-kOsMwk cmDiNF"
    >
      <label
        className="SelectBoxLabelStyled-hpnTMV iBDluV"
        disabled={false}
        htmlFor="select-box-8"
      >
        <span
          className="SelectBoxLabelTextStyled-crvvnG ivXRob"
        >
          
        </span>
      </label>
      <div
        className="WrapperStyled-hVySJD iDsAQn"
      >
        <button
          className="ButtonStyled-fxLcQY iImjnM"
          disabled={false}
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex={0}
        >
          <span
            className="ButtonTextStyled-kqmWUR ddDOaK"
          >
            
          </span>
          <span
            className="ArrowIconStyled-jkFScX fHTcFA"
            disabled={false}
          >
            <div
              className="IconSvgStyled-kZHpyB kakXQl"
              color=""
              rotate={0}
              size="normal"
            >
              <svg
                viewBox="0 0 24 24"
              >
                <path
                  d="M7,10l5,5l5-5H7z"
                />
              </svg>
            </div>
          </span>
        </button>
      </div>
    </div>
    <div
      className="SelectBoxInfoBoxStyled-hSLGDg fqpzjk"
      disabled={false}
    >
      <div
        className="MessageStyled-jQXKEs lfTAoq"
        disabled={false}
      >
        text
      </div>
    </div>
  </div>
</div>
`;

exports[`<SelectBox/> renders correctly if prop type=custom 1`] = `
<div
  className="SelectBoxStyled-ldPAdN fPuUed"
>
  <div
    className="SelectBoxCustomStyled-glIvSg hEwxlg"
    onClick={[Function]}
  >
    <div
      className="ContentBoxStyled-kOsMwk cmDiNF"
    >
      <label
        className="SelectBoxLabelStyled-hpnTMV iBDluV"
        disabled={false}
        htmlFor="select-box-9"
      >
        <span
          className="SelectBoxLabelTextStyled-crvvnG ivXRob"
        >
          
        </span>
      </label>
      <div
        className="WrapperStyled-hVySJD iDsAQn"
      >
        <button
          className="ButtonStyled-fxLcQY iImjnM"
          disabled={false}
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex={0}
        >
          <span
            className="ButtonTextStyled-kqmWUR ddDOaK"
          >
            
          </span>
          <span
            className="ArrowIconStyled-jkFScX fHTcFA"
            disabled={false}
          >
            <div
              className="IconSvgStyled-kZHpyB kakXQl"
              color=""
              rotate={0}
              size="normal"
            >
              <svg
                viewBox="0 0 24 24"
              >
                <path
                  d="M7,10l5,5l5-5H7z"
                />
              </svg>
            </div>
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`<SelectBox/> renders correctly if prop type=native 1`] = `
<div
  className="SelectBoxStyled-ldPAdN fPuUed"
>
  <div
    className="SelectBoxNativeStyled-cRmUeu iONPUm"
  >
    <div
      className="ContentBoxStyled-kOsMwk cmDiNF"
    >
      <label
        className="SelectBoxLabelStyled-hpnTMV iBDluV"
        disabled={false}
        htmlFor="select-box-0"
      >
        <span
          className="SelectBoxLabelTextStyled-crvvnG ivXRob"
        >
          
        </span>
      </label>
      <div
        className="WrapperStyled-hVySJD iDsAQn"
      >
        <div>
          <select
            className="SelectElementStyled-jfxqxD GlrDg"
            disabled={false}
            onChange={[Function]}
            value={-1}
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<SelectBox/> renders correctly if prop type=native and bordered 1`] = `
<div
  className="SelectBoxStyled-ldPAdN fPuUed"
>
  <div
    className="SelectBoxNativeStyled-cRmUeu iONPUm"
  >
    <div
      className="ContentBoxStyled-kOsMwk cmDiNF"
    >
      <label
        className="SelectBoxLabelStyled-hpnTMV dPyjOG"
        disabled={false}
        htmlFor="select-box-4"
      >
        <span
          className="SelectBoxLabelTextStyled-crvvnG ivXRob"
        >
          
        </span>
      </label>
      <div
        className="WrapperStyled-hVySJD iDsAQn"
      >
        <div>
          <select
            className="SelectElementStyled-jfxqxD gGBGZF"
            disabled={false}
            onChange={[Function]}
            value={-1}
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<SelectBox/> renders correctly if prop type=native and colorScheme error 1`] = `
<div
  className="SelectBoxStyled-ldPAdN fPuUed"
>
  <div
    className="SelectBoxNativeStyled-cRmUeu iONPUm"
  >
    <div
      className="ContentBoxStyled-kOsMwk cmDiNF"
    >
      <label
        className="SelectBoxLabelStyled-hpnTMV jdrNMp"
        disabled={false}
        htmlFor="select-box-3"
      >
        <span
          className="SelectBoxLabelTextStyled-crvvnG ivXRob"
        >
          
        </span>
      </label>
      <div
        className="WrapperStyled-hVySJD iDsAQn"
      >
        <div>
          <select
            className="SelectElementStyled-jfxqxD htAWXz"
            disabled={false}
            onChange={[Function]}
            value={-1}
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<SelectBox/> renders correctly if prop type=native and colorScheme success 1`] = `
<div
  className="SelectBoxStyled-ldPAdN fPuUed"
>
  <div
    className="SelectBoxNativeStyled-cRmUeu iONPUm"
  >
    <div
      className="ContentBoxStyled-kOsMwk cmDiNF"
    >
      <label
        className="SelectBoxLabelStyled-hpnTMV kbPljo"
        disabled={false}
        htmlFor="select-box-2"
      >
        <span
          className="SelectBoxLabelTextStyled-crvvnG ivXRob"
        >
          
        </span>
      </label>
      <div
        className="WrapperStyled-hVySJD iDsAQn"
      >
        <div>
          <select
            className="SelectElementStyled-jfxqxD zbbno"
            disabled={false}
            onChange={[Function]}
            value={-1}
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<SelectBox/> renders correctly if prop type=native and dense 1`] = `
<div
  className="SelectBoxStyled-ldPAdN fPuUed"
>
  <div
    className="SelectBoxNativeStyled-cRmUeu iONPUm"
  >
    <div
      className="ContentBoxStyled-kOsMwk cmDiNF"
    >
      <label
        className="SelectBoxLabelStyled-hpnTMV iBDluV"
        disabled={false}
        htmlFor="select-box-7"
      >
        <span
          className="SelectBoxLabelTextStyled-crvvnG ivXRob"
        >
          
        </span>
      </label>
      <div
        className="WrapperStyled-hVySJD iDsAQn"
      >
        <div>
          <select
            className="SelectElementStyled-jfxqxD KjOSR"
            disabled={false}
            onChange={[Function]}
            value={-1}
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<SelectBox/> renders correctly if prop type=native and disabled 1`] = `
<div
  className="SelectBoxStyled-ldPAdN fPuUed"
>
  <div
    className="SelectBoxNativeStyled-cRmUeu iONPUm"
  >
    <div
      className="ContentBoxStyled-kOsMwk cmDiNF"
    >
      <label
        className="SelectBoxLabelStyled-hpnTMV iBDluV"
        disabled={true}
        htmlFor="select-box-1"
      >
        <span
          className="SelectBoxLabelTextStyled-crvvnG ivXRob"
        >
          
        </span>
      </label>
      <div
        className="WrapperStyled-hVySJD iDsAQn"
      >
        <div>
          <select
            className="SelectElementStyled-jfxqxD gZFKXP"
            disabled={true}
            onChange={[Function]}
            value={-1}
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<SelectBox/> renders correctly if prop type=native and fullWidth 1`] = `
<div
  className="SelectBoxStyled-ldPAdN fPuUed"
>
  <div
    className="SelectBoxNativeStyled-cRmUeu iONPUm"
  >
    <div
      className="ContentBoxStyled-kOsMwk cmDiNF"
    >
      <label
        className="SelectBoxLabelStyled-hpnTMV iBDluV"
        disabled={false}
        htmlFor="select-box-5"
      >
        <span
          className="SelectBoxLabelTextStyled-crvvnG ivXRob"
        >
          
        </span>
      </label>
      <div
        className="WrapperStyled-hVySJD iDsAQn"
      >
        <div>
          <select
            className="SelectElementStyled-jfxqxD lkwyfU"
            disabled={false}
            onChange={[Function]}
            value={-1}
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<SelectBox/> renders correctly if prop type=native, bordered and fullWidth 1`] = `
<div
  className="SelectBoxStyled-ldPAdN fPuUed"
>
  <div
    className="SelectBoxNativeStyled-cRmUeu iONPUm"
  >
    <div
      className="ContentBoxStyled-kOsMwk cmDiNF"
    >
      <label
        className="SelectBoxLabelStyled-hpnTMV iBDluV"
        disabled={false}
        htmlFor="select-box-8"
      >
        <span
          className="SelectBoxLabelTextStyled-crvvnG ivXRob"
        >
          
        </span>
      </label>
      <div
        className="WrapperStyled-hVySJD iDsAQn"
      >
        <div>
          <select
            className="SelectElementStyled-jfxqxD gsPNsp"
            disabled={false}
            onChange={[Function]}
            value={-1}
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<SelectBox/> renders correctly if prop type=native, fullWidth and dense 1`] = `
<div
  className="SelectBoxStyled-ldPAdN fPuUed"
>
  <div
    className="SelectBoxNativeStyled-cRmUeu iONPUm"
  >
    <div
      className="ContentBoxStyled-kOsMwk cmDiNF"
    >
      <label
        className="SelectBoxLabelStyled-hpnTMV iBDluV"
        disabled={false}
        htmlFor="select-box-6"
      >
        <span
          className="SelectBoxLabelTextStyled-crvvnG ivXRob"
        >
          
        </span>
      </label>
      <div
        className="WrapperStyled-hVySJD iDsAQn"
      >
        <div>
          <select
            className="SelectElementStyled-jfxqxD iHGQnl"
            disabled={false}
            onChange={[Function]}
            value={-1}
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<SelectBox/> renders correctly option list in native mode 1`] = `
<div
  className="SelectBoxStyled-ldPAdN fPuUed"
>
  <div
    className="SelectBoxNativeStyled-cRmUeu iONPUm"
  >
    <div
      className="ContentBoxStyled-kOsMwk cmDiNF"
    >
      <label
        className="SelectBoxLabelStyled-hpnTMV iBDluV"
        disabled={false}
        htmlFor="select-box-9"
      >
        <span
          className="SelectBoxLabelTextStyled-crvvnG ivXRob"
        >
          
        </span>
      </label>
      <div
        className="WrapperStyled-hVySJD iDsAQn"
      >
        <div>
          <select
            className="SelectElementStyled-jfxqxD GlrDg"
            disabled={false}
            onChange={[Function]}
            value={-1}
          >
            <option
              disabled={true}
              value={-1}
            >
              
            </option>
            <option
              disabled={false}
              value={0}
            >
              Bar
            </option>
            <option
              disabled={true}
              value={1}
            >
              Foo
            </option>
          </select>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<SelectBox/> renders correctly with default props 1`] = `
<div
  className="SelectBoxStyled-ldPAdN fPuUed"
>
  <div
    className="SelectBoxCustomStyled-glIvSg hEwxlg"
    onClick={[Function]}
  >
    <div
      className="ContentBoxStyled-kOsMwk cmDiNF"
    >
      <label
        className="SelectBoxLabelStyled-hpnTMV iBDluV"
        disabled={false}
        htmlFor="select-box-7"
      >
        <span
          className="SelectBoxLabelTextStyled-crvvnG ivXRob"
        >
          
        </span>
      </label>
      <div
        className="WrapperStyled-hVySJD iDsAQn"
      >
        <button
          className="ButtonStyled-fxLcQY iImjnM"
          disabled={false}
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex={0}
        >
          <span
            className="ButtonTextStyled-kqmWUR ddDOaK"
          >
            
          </span>
          <span
            className="ArrowIconStyled-jkFScX fHTcFA"
            disabled={false}
          >
            <div
              className="IconSvgStyled-kZHpyB kakXQl"
              color=""
              rotate={0}
              size="normal"
            >
              <svg
                viewBox="0 0 24 24"
              >
                <path
                  d="M7,10l5,5l5-5H7z"
                />
              </svg>
            </div>
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`<SelectBoxCustom /> renders correctly if prop message set text and dense 1`] = `
<div
  className="SelectBoxStyled-ldPAdN fPuUed"
>
  <div
    className="SelectBoxCustomStyled-glIvSg hEwxlg"
    onClick={[Function]}
  >
    <div
      className="ContentBoxStyled-kOsMwk cmDiNF"
    >
      <label
        className="SelectBoxLabelStyled-hpnTMV iBDluV"
        disabled={false}
        htmlFor="select-box-3"
      >
        <span
          className="SelectBoxLabelTextStyled-crvvnG ivXRob"
        >
          
        </span>
      </label>
      <div
        className="WrapperStyled-hVySJD iDsAQn"
      >
        <button
          className="ButtonStyled-fxLcQY iImjnM"
          disabled={false}
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex={0}
        >
          <span
            className="ButtonTextStyled-kqmWUR bKWUls"
          >
            
          </span>
          <span
            className="ArrowIconStyled-jkFScX cOyrCN"
            disabled={false}
          >
            <div
              className="IconSvgStyled-kZHpyB kakXQl"
              color=""
              rotate={0}
              size="normal"
            >
              <svg
                viewBox="0 0 24 24"
              >
                <path
                  d="M7,10l5,5l5-5H7z"
                />
              </svg>
            </div>
          </span>
        </button>
      </div>
    </div>
    <div
      className="SelectBoxInfoBoxStyled-hSLGDg fqpzjk"
      disabled={false}
    >
      <div
        className="MessageStyled-jQXKEs lfTAoq"
        disabled={false}
      >
        text
      </div>
    </div>
  </div>
</div>
`;

exports[`<SelectBoxCustom /> renders correctly if prop message set text and disabled 1`] = `
<div
  className="SelectBoxStyled-ldPAdN fPuUed"
>
  <div
    className="SelectBoxCustomStyled-glIvSg hEwxlg"
    onClick={[Function]}
  >
    <div
      className="ContentBoxStyled-kOsMwk cmDiNF"
    >
      <label
        className="SelectBoxLabelStyled-hpnTMV iBDluV"
        disabled={true}
        htmlFor="select-box-5"
      >
        <span
          className="SelectBoxLabelTextStyled-crvvnG ivXRob"
        >
          
        </span>
      </label>
      <div
        className="WrapperStyled-hVySJD iDsAQn"
      >
        <button
          className="ButtonStyled-fxLcQY cnLRbk"
          disabled={true}
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex={0}
        >
          <span
            className="ButtonTextStyled-kqmWUR ddDOaK"
          >
            
          </span>
          <span
            className="ArrowIconStyled-jkFScX iMVnXK"
            disabled={true}
          >
            <div
              className="IconSvgStyled-kZHpyB kakXQl"
              color=""
              rotate={0}
              size="normal"
            >
              <svg
                viewBox="0 0 24 24"
              >
                <path
                  d="M7,10l5,5l5-5H7z"
                />
              </svg>
            </div>
          </span>
        </button>
      </div>
    </div>
    <div
      className="SelectBoxInfoBoxStyled-hSLGDg fqpzjk"
      disabled={true}
    >
      <div
        className="MessageStyled-jQXKEs lfTAoq"
        disabled={true}
      >
        text
      </div>
    </div>
  </div>
</div>
`;

exports[`<SelectBoxCustom /> renders correctly if prop message set text and fullWidth 1`] = `
<div
  className="SelectBoxStyled-ldPAdN fPuUed"
>
  <div
    className="SelectBoxCustomStyled-glIvSg hEwxlg"
    onClick={[Function]}
  >
    <div
      className="ContentBoxStyled-kOsMwk cmDiNF"
    >
      <label
        className="SelectBoxLabelStyled-hpnTMV iBDluV"
        disabled={false}
        htmlFor="select-box-4"
      >
        <span
          className="SelectBoxLabelTextStyled-crvvnG ivXRob"
        >
          
        </span>
      </label>
      <div
        className="WrapperStyled-hVySJD iDsAQn"
      >
        <button
          className="ButtonStyled-fxLcQY jaTCPo"
          disabled={false}
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex={0}
        >
          <span
            className="ButtonTextStyled-kqmWUR gCWwOM"
          >
            
          </span>
          <span
            className="ArrowIconStyled-jkFScX giKDTi"
            disabled={false}
          >
            <div
              className="IconSvgStyled-kZHpyB kakXQl"
              color=""
              rotate={0}
              size="normal"
            >
              <svg
                viewBox="0 0 24 24"
              >
                <path
                  d="M7,10l5,5l5-5H7z"
                />
              </svg>
            </div>
          </span>
        </button>
      </div>
    </div>
    <div
      className="SelectBoxInfoBoxStyled-hSLGDg fqpzjk"
      disabled={false}
    >
      <div
        className="MessageStyled-jQXKEs lfTAoq"
        disabled={false}
      >
        text
      </div>
    </div>
  </div>
</div>
`;

exports[`<SelectBoxCustom /> renders correctly if prop message set text andcolorScheme set error 1`] = `
<div
  className="SelectBoxStyled-ldPAdN fPuUed"
>
  <div
    className="SelectBoxCustomStyled-glIvSg hEwxlg"
    onClick={[Function]}
  >
    <div
      className="ContentBoxStyled-kOsMwk cmDiNF"
    >
      <label
        className="SelectBoxLabelStyled-hpnTMV jdrNMp"
        disabled={false}
        htmlFor="select-box-1"
      >
        <span
          className="SelectBoxLabelTextStyled-crvvnG ivXRob"
        >
          
        </span>
      </label>
      <div
        className="WrapperStyled-hVySJD iDsAQn"
      >
        <button
          className="ButtonStyled-fxLcQY hLDDEY"
          disabled={false}
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex={0}
        >
          <span
            className="ButtonTextStyled-kqmWUR ddDOaK"
          >
            
          </span>
          <span
            className="ArrowIconStyled-jkFScX eBwARW"
            disabled={false}
          >
            <div
              className="IconSvgStyled-kZHpyB kakXQl"
              color=""
              rotate={0}
              size="normal"
            >
              <svg
                viewBox="0 0 24 24"
              >
                <path
                  d="M7,10l5,5l5-5H7z"
                />
              </svg>
            </div>
          </span>
        </button>
      </div>
    </div>
    <div
      className="SelectBoxInfoBoxStyled-hSLGDg fqpzjk"
      disabled={false}
    >
      <div
        className="MessageStyled-jQXKEs hplMGe"
        disabled={false}
      >
        text
      </div>
    </div>
  </div>
</div>
`;

exports[`<SelectBoxCustom /> renders correctly if prop message set text andcolorScheme set success 1`] = `
<div
  className="SelectBoxStyled-ldPAdN fPuUed"
>
  <div
    className="SelectBoxCustomStyled-glIvSg hEwxlg"
    onClick={[Function]}
  >
    <div
      className="ContentBoxStyled-kOsMwk cmDiNF"
    >
      <label
        className="SelectBoxLabelStyled-hpnTMV kbPljo"
        disabled={false}
        htmlFor="select-box-0"
      >
        <span
          className="SelectBoxLabelTextStyled-crvvnG ivXRob"
        >
          
        </span>
      </label>
      <div
        className="WrapperStyled-hVySJD iDsAQn"
      >
        <button
          className="ButtonStyled-fxLcQY grOYGa"
          disabled={false}
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex={0}
        >
          <span
            className="ButtonTextStyled-kqmWUR ddDOaK"
          >
            
          </span>
          <span
            className="ArrowIconStyled-jkFScX eBwARW"
            disabled={false}
          >
            <div
              className="IconSvgStyled-kZHpyB kakXQl"
              color=""
              rotate={0}
              size="normal"
            >
              <svg
                viewBox="0 0 24 24"
              >
                <path
                  d="M7,10l5,5l5-5H7z"
                />
              </svg>
            </div>
          </span>
        </button>
      </div>
    </div>
    <div
      className="SelectBoxInfoBoxStyled-hSLGDg fqpzjk"
      disabled={false}
    >
      <div
        className="MessageStyled-jQXKEs kOwsrk"
        disabled={false}
      >
        text
      </div>
    </div>
  </div>
</div>
`;

exports[`<SelectBoxCustom /> renders correctly if prop message set text,dense and fullWidth 1`] = `
<div
  className="SelectBoxStyled-ldPAdN fPuUed"
>
  <div
    className="SelectBoxCustomStyled-glIvSg hEwxlg"
    onClick={[Function]}
  >
    <div
      className="ContentBoxStyled-kOsMwk cmDiNF"
    >
      <label
        className="SelectBoxLabelStyled-hpnTMV iBDluV"
        disabled={false}
        htmlFor="select-box-2"
      >
        <span
          className="SelectBoxLabelTextStyled-crvvnG ivXRob"
        >
          
        </span>
      </label>
      <div
        className="WrapperStyled-hVySJD iDsAQn"
      >
        <button
          className="ButtonStyled-fxLcQY jaTCPo"
          disabled={false}
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex={0}
        >
          <span
            className="ButtonTextStyled-kqmWUR ddDOaK"
          >
            
          </span>
          <span
            className="ArrowIconStyled-jkFScX fHTcFA"
            disabled={false}
          >
            <div
              className="IconSvgStyled-kZHpyB kakXQl"
              color=""
              rotate={0}
              size="normal"
            >
              <svg
                viewBox="0 0 24 24"
              >
                <path
                  d="M7,10l5,5l5-5H7z"
                />
              </svg>
            </div>
          </span>
        </button>
      </div>
    </div>
    <div
      className="SelectBoxInfoBoxStyled-hSLGDg fqpzjk"
      disabled={false}
    >
      <div
        className="MessageStyled-jQXKEs lfTAoq"
        disabled={false}
      >
        text
      </div>
    </div>
  </div>
</div>
`;

exports[`<SelectBoxCustom /> renders correctly with label, tooltip and message 1`] = `
<div
  className="SelectBoxStyled-ldPAdN fPuUed"
>
  <div
    className="SelectBoxCustomStyled-glIvSg hEwxlg"
    onClick={[Function]}
  >
    <div
      className="ContentBoxStyled-kOsMwk cmDiNF"
    >
      <label
        className="SelectBoxLabelStyled-hpnTMV iBDluV"
        disabled={false}
        htmlFor="select-box-6"
      >
        <span
          className="SelectBoxLabelTextStyled-crvvnG ivXRob"
        >
          Foo
        </span>
        <div
          className="TooltipIconStyled-egvEre kUiAus"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          tabIndex={1}
        >
          <span>
            ?
          </span>
        </div>
      </label>
      <div
        className="WrapperStyled-hVySJD iDsAQn"
      >
        <button
          className="ButtonStyled-fxLcQY iImjnM"
          disabled={false}
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex={0}
        >
          <span
            className="ButtonTextStyled-kqmWUR ddDOaK"
          >
            text
          </span>
          <span
            className="ArrowIconStyled-jkFScX fHTcFA"
            disabled={false}
          >
            <div
              className="IconSvgStyled-kZHpyB kakXQl"
              color=""
              rotate={0}
              size="normal"
            >
              <svg
                viewBox="0 0 24 24"
              >
                <path
                  d="M7,10l5,5l5-5H7z"
                />
              </svg>
            </div>
          </span>
        </button>
      </div>
    </div>
    <div
      className="SelectBoxInfoBoxStyled-hSLGDg fqpzjk"
      disabled={false}
    >
      <div
        className="MessageStyled-jQXKEs lfTAoq"
        disabled={false}
      >
        FooBar
      </div>
    </div>
  </div>
</div>
`;

exports[`<SelectBoxNative /> handles change 1`] = `
<div
  className="SelectBoxStyled-ldPAdN fPuUed"
>
  <div
    className="SelectBoxNativeStyled-cRmUeu iONPUm"
  >
    <div
      className="ContentBoxStyled-kOsMwk cmDiNF"
    >
      <label
        className="SelectBoxLabelStyled-hpnTMV iBDluV"
        disabled={false}
        htmlFor="select-box-13"
      >
        <span
          className="SelectBoxLabelTextStyled-crvvnG ivXRob"
        >
          
        </span>
      </label>
      <div
        className="WrapperStyled-hVySJD iDsAQn"
      >
        <div>
          <select
            className="SelectElementStyled-jfxqxD GlrDg"
            disabled={false}
            onChange={[Function]}
            value={0}
          >
            <option
              disabled={true}
              value={-1}
            >
              
            </option>
            <option
              disabled={false}
              value={0}
            >
              text
            </option>
          </select>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<SelectBoxNative /> renders correctly if set options and defaultValue 1`] = `
<div
  className="SelectBoxStyled-ldPAdN fPuUed"
>
  <div
    className="SelectBoxNativeStyled-cRmUeu iONPUm"
  >
    <div
      className="ContentBoxStyled-kOsMwk cmDiNF"
    >
      <label
        className="SelectBoxLabelStyled-hpnTMV iBDluV"
        disabled={false}
        htmlFor="select-box-10"
      >
        <span
          className="SelectBoxLabelTextStyled-crvvnG ivXRob"
        >
          
        </span>
      </label>
      <div
        className="WrapperStyled-hVySJD iDsAQn"
      >
        <div>
          <select
            className="SelectElementStyled-jfxqxD GlrDg"
            disabled={false}
            onChange={[Function]}
            value={0}
          >
            <option
              disabled={true}
              value={-1}
            >
              
            </option>
            <option
              disabled={false}
              value={0}
            >
              text
            </option>
          </select>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<SelectBoxNative /> renders correctly if set options and value 1`] = `
<div
  className="SelectBoxStyled-ldPAdN fPuUed"
>
  <div
    className="SelectBoxNativeStyled-cRmUeu iONPUm"
  >
    <div
      className="ContentBoxStyled-kOsMwk cmDiNF"
    >
      <label
        className="SelectBoxLabelStyled-hpnTMV iBDluV"
        disabled={false}
        htmlFor="select-box-11"
      >
        <span
          className="SelectBoxLabelTextStyled-crvvnG ivXRob"
        >
          
        </span>
      </label>
      <div
        className="WrapperStyled-hVySJD iDsAQn"
      >
        <div>
          <select
            className="SelectElementStyled-jfxqxD GlrDg"
            disabled={false}
            onChange={[Function]}
            value={0}
          >
            <option
              disabled={true}
              value={-1}
            >
              
            </option>
            <option
              disabled={false}
              value={0}
            >
              text
            </option>
          </select>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<SelectBoxNative /> renders correctly with label, tooltip and message 1`] = `
<div
  className="SelectBoxStyled-ldPAdN fPuUed"
>
  <div
    className="SelectBoxNativeStyled-cRmUeu iONPUm"
  >
    <div
      className="ContentBoxStyled-kOsMwk cmDiNF"
    >
      <label
        className="SelectBoxLabelStyled-hpnTMV iBDluV"
        disabled={false}
        htmlFor="select-box-12"
      >
        <span
          className="SelectBoxLabelTextStyled-crvvnG ivXRob"
        >
          Foo
        </span>
        <div
          className="TooltipIconStyled-egvEre kUiAus"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          tabIndex={1}
        >
          <span>
            ?
          </span>
        </div>
      </label>
      <div
        className="WrapperStyled-hVySJD iDsAQn"
      >
        <div>
          <select
            className="SelectElementStyled-jfxqxD GlrDg"
            disabled={false}
            onChange={[Function]}
            value={0}
          >
            <option
              disabled={true}
              value={-1}
            >
              
            </option>
            <option
              disabled={false}
              value={0}
            >
              text
            </option>
          </select>
        </div>
      </div>
    </div>
    <div
      className="SelectBoxInfoBoxStyled-hSLGDg fqpzjk"
      disabled={false}
    >
      <div
        className="MessageStyled-jQXKEs lfTAoq"
        disabled={false}
      >
        FooBar
      </div>
    </div>
  </div>
</div>
`;
